--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html, body{
 	background-color: #f4f4f4;
 	margin: 0;
 	height: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	font-family: 'Open Sans', sans-serif;
 }
 
@@ -26,9 +26,10 @@ html, body{
 /* main */
 #main{
 	border: 0;
+	margin: 0 auto;
 	width: 100%;
+	height: 100%;
 	display: block;
-	text-align: center;
 	direction:ltr;
 }
 
@@ -186,17 +187,18 @@ html, body{
 /* content */
 #content{
 	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 5%;
 	width: 90%;
-	display: block;
+	display: inline-block;
 	background-color: #fff;
 	border: 1px solid #dedede;
-	height: 80%;
-	overflow: auto;
-	position: relative;
+	min-height: 80%;
+	overflow: hidden;
 }
 
 /* header */
-header{
+#header{
 	width: 100%;
 	height: 100px;
 	display: block;
@@ -1148,4 +1150,8 @@ header{
 		-webkit-border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
+}
+
+#FormularioEdicionCategoria{
+	margin-bottom: 30px;
 }
