--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ html, body{
 #menu{
 	margin-left: 5%;
 	width: 30%;
-	height: 80%;
+	min-height: 80%;
 	display: none;
 	float: left;
 	border: 0;
@@ -46,23 +46,32 @@ html, body{
 	border: 1px solid #dedede;
 	overflow-x: auto;
 	overflow-y: hidden;
+	padding: 0;
 }
 
-#menu hr{
+#menu #categorias hr{
 	display: inline-block;
 	width: 25%;
 	border: 1px solid #dedede;
 	vertical-align: middle;
 }
 
-#menu #categorias{
+#menu #categorias {
 	display: block;
-	width: auto;
-	height: 100%;
-	max-height: 100%;
+	width: 100%;
+	min-height: 80%;
 	margin: 0;
 	padding: 0;
 	z-index: -1;
+}
+
+#menu #categorias .titulo{
+	display: block;
+	text-align: center;
+	font-size: 20px;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 #categorias .categoria, 
@@ -71,7 +80,6 @@ html, body{
 	position: relative;
 	float: left;
 	min-width: 150px;
-	height: 100%;
 }
 
 #categorias .categoria ul, 
@@ -116,6 +124,7 @@ html, body{
 	display: inline-block;
 	float: right;
 	margin-right: 15px;
+	cursor: pointer;
 }
 
 #BoxArchivo{
@@ -190,11 +199,12 @@ html, body{
 	text-align: center;
 	margin-bottom: 5%;
 	width: 90%;
-	display: inline-block;
+	display: block;
 	background-color: #fff;
 	border: 1px solid #dedede;
 	min-height: 80%;
 	overflow: hidden;
+	position: relative;
 }
 
 /* header */
@@ -459,10 +469,23 @@ html, body{
 #nombreNorma{
 	background-color: #A1CA4A;
 	color: #fff;
+	border: 1px solid #dedede;
+	border-bottom: 0 solid transparent !important;
 	font-size: 20px;
 	padding: 7px 0;
 	width: 95%;
 	margin: 0 auto;
+
+		-o-border-radius-topleft: 5px;
+		-o-border-radius-topright: 5
+		-ms-border-radius-topleft: 5px;
+		-ms-border-radius-topright: 5
+		-moz-border-radius-topleft: 5px;
+		-moz-border-radius-topright: 5px;
+		-webkit-border-top-left-radius: 5px;
+		-webkit-border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 
 #nombreNorma input{
