--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,8 @@ html, body{
 	border: 0;
 	margin: 0 auto;
 	width: 100%;
-	height: 100%;
+	height: 80%;
 	display: block;
-	direction:ltr;
 }
 
 /* menu */
@@ -195,9 +194,8 @@ html, body{
 
 /* content */
 #content{
-	margin: 0 auto;
+	margin: 0 auto 5% auto !important;
 	text-align: center;
-	margin-bottom: 5%;
 	width: 90%;
 	display: block;
 	background-color: #fff;
@@ -211,20 +209,19 @@ html, body{
 #header{
 	width: 100%;
 	height: 100px;
-	display: block;
+	display: inline-block;
 	vertical-align: middle;
 	border: 0;
 	text-align: right;
 	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 
 .logo{
 	float: left;
-	margin-left: 10%;
+	margin-left: 5%;
 	height: 100px;
 }
-
 
 .toolbar{
 	border: 0;
