--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,10 @@ html, body{
 	display: block;
 }
 
-/* menu */
-#menu{
+/*
+*	MENU
+*/
+#menu, #menu2{
 	margin-left: 5%;
 	width: 30%;
 	min-height: 80%;
@@ -48,15 +50,18 @@ html, body{
 	padding: 0;
 }
 
-#menu #categorias hr{
+#menu #categorias hr,
+#menu #normas hr{
 	display: inline-block;
 	width: 25%;
 	border: 1px solid #dedede;
 	vertical-align: middle;
 }
 
-#menu #categorias {
+#menu #categorias,
+#menu #normas {
 	display: block;
+	text-align: center;
 	width: 100%;
 	min-height: 80%;
 	margin: 0;
@@ -64,7 +69,8 @@ html, body{
 	z-index: -1;
 }
 
-#menu #categorias .titulo{
+#menu #categorias .titulo,
+#menu #normas .titulo{
 	display: block;
 	text-align: center;
 	font-size: 20px;
@@ -73,23 +79,23 @@ html, body{
 	padding: 0;
 }
 
-#categorias .categoria, 
-#categorias .root{
+#menu .categoria, 
+#menu .root{
 	display: table-cell !important;
 	position: relative;
 	float: left;
 	min-width: 150px;
 }
 
-#categorias .categoria ul, 
-#categorias .root ul{
+#menu .categoria ul, 
+#menu .root ul{
 	display: block;
 	float: left;
 	min-width: 150px;
 }
 
-#categorias .categoria ul li, 
-#categorias .root ul li{
+#menu .categoria ul li, 
+#menu .root ul li{
 	list-style: none;
 	border: 0;
 	padding: 5px;
@@ -98,8 +104,8 @@ html, body{
 	cursor: pointer;
 }
 
-#categorias .categoria ul li:hover,
-#categorias .root ul li:hover{
+#menu .categoria ul li:hover,
+#menu .root ul li:hover{
 	background-color: rgba(117, 114, 115, .3);
 }
 
@@ -461,6 +467,34 @@ html, body{
 #nivel1, #nivel2{
 	display: block;
 	width: 100%;
+}
+
+/*
+*	INPUTS DARK
+*/
+
+.dark-input input[type="text"]{
+	padding: 5px 5px;
+	background-color: rgba(117, 114, 115, 0.3);
+	border: 1px solid rgba(117, 114, 115, 0.4);
+	font-size: 20px;
+
+		-o-border-radius: 5px;
+		-ms-border-radius: 5px;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;
+	border-radius: 5px;
+
+	color: rgba(117, 114, 115, .7);
+	font-weight: bold;
+	box-shadow: none;
+	font-size: 20px;
+	outline: none; /**fix para webkit */
+}
+
+.dark-input input[type="text"]:focus,
+.dark-input input[type="text"]:active{
+	color: rgba(117, 114, 115, 1);
 }
 
 #nombreNorma{
