--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,7 @@ html, body{
 	padding: 0;
 }
 
-#menu #categorias hr,
-#menu #normas hr{
+#menu #categorias hr{
 	display: inline-block;
 	width: 25%;
 	border: 1px solid #dedede;
@@ -69,8 +68,7 @@ html, body{
 	z-index: -1;
 }
 
-#menu #categorias .titulo,
-#menu #normas .titulo{
+#menu #categorias .titulo{
 	display: block;
 	text-align: center;
 	font-size: 20px;
@@ -123,6 +121,14 @@ html, body{
 
 .datos textarea{
 	margin: 0 auto;
+}
+.close_datos{
+	display: none;
+}
+.datos select{
+	margin: 0 auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #uploader{
@@ -190,12 +196,24 @@ html, body{
 	border: none;
 }
 
-#titulo{
+/**
+* TITULOS
+*/
+
+.titulo{
 	display: block;
 	text-align: center;
-	font-size: 30px;
+	font-size: 20px;
 	color: #747273;
-	margin-top: 20px;
+	padding: 0;
+}
+
+.titulo hr{
+	margin: 0;
+	padding: 0;
+	border: 1px solid #dedede;
+	vertical-align: middle;
+	margin-bottom: 10px;
 }
 
 /* content */
@@ -1208,4 +1226,12 @@ html, body{
 
 #FormularioEdicionCategoria{
 	margin-bottom: 30px;
+}
+
+/**
+* DESHABILITADOS
+*/
+
+.deshabilitado{
+	opacity: .4;
 }
