cambiado el menu al dropdown del menu principal, asi se ahorra espacio y se agrupan las funciones

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ html, body{
 }
 
 #toolbarMenu .seleccionado{
-	background-color: #a1ca4a;
+	background-color: #a1ca4a !important;
 	color: #fff;
 }
 
