--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@ html, body{
 	margin-right: 0;
 	background-color: #FFFFFF;
 	border: 1px solid #dedede;
-	overflow-x: auto;
-	overflow-y: hidden;
+	overflow-x: auto !important;
+	overflow-y: hidden !important;
 	padding: 0;
 }
 
@@ -58,7 +58,7 @@ html, body{
 }
 
 #menu #categorias,
-#menu #normas {
+#menu #articulos {
 	display: block;
 	text-align: center;
 	width: 100%;
@@ -92,7 +92,14 @@ html, body{
 	min-width: 150px;
 }
 
-#menu .categoria ul li, 
+#menu .normas ul{
+	text-align: center;
+	display: block;
+	min-width: 150px;
+}
+
+#menu .categoria ul li,
+#menu .normas ul li,
 #menu .root ul li{
 	list-style: none;
 	border: 0;
@@ -103,6 +110,7 @@ html, body{
 }
 
 #menu .categoria ul li:hover,
+#menu .normas ul li:hover,
 #menu .root ul li:hover{
 	background-color: rgba(117, 114, 115, .3);
 }
@@ -1234,4 +1242,379 @@ html, body{
 
 .deshabilitado{
 	opacity: .4;
+}
+
+
+/**
+* LOADER
+*/
+#loader{
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	position: absolute;
+	top: 0;
+	display: none;
+	background-color: rgba(121, 118, 116, .8);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#928F8E, endColorstr=#928F8E)";
+	/*background-image: url('../images/ajax_loader_green_128.gif');*/
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-position:center; 
+	vertical-align: middle;
+}
+
+/**
+* ANIMCACION EN CSS
+*/
+.windows8 {
+	position: relative;
+	width: 90px;
+	height:90px;
+	top: 40%;
+	margin: auto auto;
+}
+
+.windows8 .wBall {
+	position: absolute;
+	width: 86px;
+	height: 86px;
+	opacity: 0;
+		-moz-transform: rotate(225deg);
+		-moz-animation: orbit 7.15s infinite;
+		-webkit-transform: rotate(225deg);
+		-webkit-animation: orbit 7.15s infinite;
+		-ms-transform: rotate(225deg);
+		-ms-animation: orbit 7.15s infinite;
+		-o-transform: rotate(225deg);
+		-o-animation: orbit 7.15s infinite;
+	transform: rotate(225deg);
+	animation: orbit 7.15s infinite;
+}
+
+.windows8 .wBall .wInnerBall{
+	position: absolute;
+	width: 11px;
+	height: 11px;
+	background: #797674;
+	left:0px;
+	top:0px;
+		-moz-border-radius: 11px;
+		-webkit-border-radius: 11px;
+		-ms-border-radius: 11px;
+		-o-border-radius: 11px;
+	border-radius: 11px;
+}
+
+.windows8 #wBall_1 {
+		-moz-animation-delay: 1.56s;
+		-webkit-animation-delay: 1.56s;
+		-ms-animation-delay: 1.56s;
+		-o-animation-delay: 1.56s;
+	animation-delay: 1.56s;
+}
+
+.windows8 #wBall_2 {
+		-moz-animation-delay: 0.31s;
+		-webkit-animation-delay: 0.31s;
+		-ms-animation-delay: 0.31s;
+		-o-animation-delay: 0.31s;
+	animation-delay: 0.31s;
+}
+
+.windows8 #wBall_3 {
+		-moz-animation-delay: 0.62s;
+		-webkit-animation-delay: 0.62s;
+		-ms-animation-delay: 0.62s;
+		-o-animation-delay: 0.62s;
+	animation-delay: 0.62s;
+}
+
+.windows8 #wBall_4 {
+		-moz-animation-delay: 0.94s;
+		-webkit-animation-delay: 0.94s;
+		-ms-animation-delay: 0.94s;
+		-o-animation-delay: 0.94s;
+	animation-delay: 0.94s;
+}
+
+.windows8 #wBall_5 {
+		-moz-animation-delay: 1.25s;
+		-webkit-animation-delay: 1.25s;
+		-ms-animation-delay: 1.25s;
+		-o-animation-delay: 1.25s;
+	animation-delay: 1.25s;
+}
+
+@-moz-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-moz-transform: rotate(-180deg);
+-moz-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-moz-transform: rotate(-300deg);
+-moz-animation-timing-function: linear;
+-moz-origin:0%;
+}
+
+30% {
+opacity: 1;
+-moz-transform:rotate(-410deg);
+-moz-animation-timing-function: ease-in-out;
+-moz-origin:7%;
+}
+
+39% {
+opacity: 1;
+-moz-transform: rotate(-645deg);
+-moz-animation-timing-function: linear;
+-moz-origin:30%;
+}
+
+70% {
+opacity: 1;
+-moz-transform: rotate(-770deg);
+-moz-animation-timing-function: ease-out;
+-moz-origin:39%;
+}
+
+75% {
+opacity: 1;
+-moz-transform: rotate(-900deg);
+-moz-animation-timing-function: ease-out;
+-moz-origin:70%;
+}
+
+76% {
+opacity: 0;
+-moz-transform:rotate(-900deg);
+}
+
+100% {
+opacity: 0;
+-moz-transform: rotate(-900deg);
+}
+
+}
+
+@-webkit-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-webkit-transform: rotate(-180deg);
+-webkit-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-webkit-transform: rotate(-300deg);
+-webkit-animation-timing-function: linear;
+-webkit-origin:0%;
+}
+
+30% {
+opacity: 1;
+-webkit-transform:rotate(-410deg);
+-webkit-animation-timing-function: ease-in-out;
+-webkit-origin:7%;
+}
+
+39% {
+opacity: 1;
+-webkit-transform: rotate(-645deg);
+-webkit-animation-timing-function: linear;
+-webkit-origin:30%;
+}
+
+70% {
+opacity: 1;
+-webkit-transform: rotate(-770deg);
+-webkit-animation-timing-function: ease-out;
+-webkit-origin:39%;
+}
+
+75% {
+opacity: 1;
+-webkit-transform: rotate(-900deg);
+-webkit-animation-timing-function: ease-out;
+-webkit-origin:70%;
+}
+
+76% {
+opacity: 0;
+-webkit-transform:rotate(-900deg);
+}
+
+100% {
+opacity: 0;
+-webkit-transform: rotate(-900deg);
+}
+
+}
+
+@-ms-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-ms-transform: rotate(-180deg);
+-ms-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-ms-transform: rotate(-300deg);
+-ms-animation-timing-function: linear;
+-ms-origin:0%;
+}
+
+30% {
+opacity: 1;
+-ms-transform:rotate(-410deg);
+-ms-animation-timing-function: ease-in-out;
+-ms-origin:7%;
+}
+
+39% {
+opacity: 1;
+-ms-transform: rotate(-645deg);
+-ms-animation-timing-function: linear;
+-ms-origin:30%;
+}
+
+70% {
+opacity: 1;
+-ms-transform: rotate(-770deg);
+-ms-animation-timing-function: ease-out;
+-ms-origin:39%;
+}
+
+75% {
+opacity: 1;
+-ms-transform: rotate(-900deg);
+-ms-animation-timing-function: ease-out;
+-ms-origin:70%;
+}
+
+76% {
+opacity: 0;
+-ms-transform:rotate(-900deg);
+}
+
+100% {
+opacity: 0;
+-ms-transform: rotate(-900deg);
+}
+
+}
+
+@-o-keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+-o-transform: rotate(-180deg);
+-o-animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+-o-transform: rotate(-300deg);
+-o-animation-timing-function: linear;
+-o-origin:0%;
+}
+
+30% {
+opacity: 1;
+-o-transform:rotate(-410deg);
+-o-animation-timing-function: ease-in-out;
+-o-origin:7%;
+}
+
+39% {
+opacity: 1;
+-o-transform: rotate(-645deg);
+-o-animation-timing-function: linear;
+-o-origin:30%;
+}
+
+70% {
+opacity: 1;
+-o-transform: rotate(-770deg);
+-o-animation-timing-function: ease-out;
+-o-origin:39%;
+}
+
+75% {
+opacity: 1;
+-o-transform: rotate(-900deg);
+-o-animation-timing-function: ease-out;
+-o-origin:70%;
+}
+
+76% {
+opacity: 0;
+-o-transform:rotate(-900deg);
+}
+
+100% {
+opacity: 0;
+-o-transform: rotate(-900deg);
+}
+
+}
+
+@keyframes orbit {
+0% {
+opacity: 1;
+z-index:99;
+transform: rotate(-180deg);
+animation-timing-function: ease-out;
+}
+
+7% {
+opacity: 1;
+transform: rotate(-300deg);
+animation-timing-function: linear;
+origin:0%;
+}
+
+30% {
+opacity: 1;
+transform:rotate(-410deg);
+animation-timing-function: ease-in-out;
+origin:7%;
+}
+
+39% {
+opacity: 1;
+transform: rotate(-645deg);
+animation-timing-function: linear;
+origin:30%;
+}
+
+70% {
+opacity: 1;
+transform: rotate(-770deg);
+animation-timing-function: ease-out;
+origin:39%;
+}
+
+75% {
+opacity: 1;
+transform: rotate(-900deg);
+animation-timing-function: ease-out;
+origin:70%;
+}
+
+76% {
+opacity: 0;
+transform:rotate(-900deg);
+}
+
+100% {
+opacity: 0;
+transform: rotate(-900deg);
 }
