--- a/css/selector/jquery.multiselect.css
+++ b/css/selector/jquery.multiselect.css
@@ -48,6 +48,7 @@
 .ui-multiselect-checkboxes li.ui-multiselect-optgroup-label a { display:block; padding:3px; margin:1px 0; text-decoration:none }
 
 .ui-helper-reset{
+	display: none;
 	margin-bottom: 3px;
 	display: block;
 	color: rgba(117, 114, 115, .4);
