--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ a {outline:none; text-decoration: none; }
 }
 
 /*END RESET ---------------------------*/
+
 html, body{
 	background-color: #f4f4f4;
 	margin: 0;
@@ -1425,11 +1426,42 @@ html, body{
 */
 
 .deshabilitado{
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
-    filter: alpha(opacity=40);
-    opacity: .4;
+		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+	    filter: alpha(opacity=40);
+	    -o-opacity: 0.40;
+	    -ms-opacity: 0.40; /*ie10*/
+	    -moz-opacity: 0.40;
+	    -webkit-opacity: 0.40;
+    opacity: 0.40;
 }
 
+.content-disable > #content{
+	opacity: .5 !important;
+}
+
+.content-disable{
+	z-index: 999;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	padding-top: 25%;
+	background-color: #fff;
+
+		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	    filter: alpha(opacity=50);
+	    -o-opacity: 0.50;
+	    -ms-opacity: 0.50; /*ie10*/
+	    -moz-opacity: 0.50;
+	    -webkit-opacity: 0.50;
+    opacity: 0.50;
+}
+
+.content-disable p{
+	background-color: #9B9B9B;
+	background-color: rgba(56,56,56,.5);
+	border-top: solid 1px #fff;
+	border-bottom: solid 1px #fff;
+}
 
 /**
 * LOADER
@@ -1803,15 +1835,5 @@ transform:rotate(-900deg);
 100% {
 opacity: 0;
 transform: rotate(-900deg);
-}
-
-.disable{
-	z-index: 999;
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	background-color: #9B9B9B;
-	background-color: rgba(56,56,56,.5);
-	padding-top: 40%;
 }
 
