Desarrollo de vista de clientes, edicion, exportacion y creacion de clientes listo

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,21 @@ html, body{
 	text-align: left;
 }
 
+.datos .td-user-image {
+	vertical-align: middle;
+	text-align: center;
+}
+
+.datos .td-user-image img{
+	border: 2px solid #fff;
+	height: 145px;
+}
+
+.datos .td-user-image img:hover{
+	border: 2px solid #A1CA4A;
+	box-shadow: 0 0 10px #A1CA4A;
+}
+
 .datos #normas-categoria{
 	text-align: center;
 	width: 100%;
