--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ html, body{
  */
 .table-list{
 	width: 100%;
-	margin: 0 auto;
+	margin: 20px auto;
 	text-align: center;
 	font-size: 20px;
 }
@@ -295,6 +295,10 @@ html, body{
 /**
 * BOTONERAS
 */
+.ocultos{
+	display: none;
+}
+
 .datos-botones{
 	margin-top: 20px;
 	margin-bottom: 20px;
