--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,15 @@ html, body{
 	padding-top: 20px;
 }
 
+#menu .categorias-componer ul{
+	text-align: left;
+	display: block;
+	min-width: 150px;
+	padding-top: 20px;
+}
+
 #menu .categoria ul li,
+#menu .categorias-componer ul li,
 #menu .normas ul li,
 #menu .entidades ul li,
 #menu .tipos ul li,
